5.3.0

NEW
    - World marker placement keybinds added to 'GW2 UI' section of default bindings UI
    - Added Corrupted Memento to scenario tracker in heroic vision
    - Rebuilt health globe for performance and graphical improvement
    - Rebuilt dodge bar for performance and graphical improvement
    - Dodge bar now works as a secure button and can be bound to a key
    - Added option for range indicator on mainbar
    - Added option to show player health and absorb as %, value or both
    - Settings menu improvements
    - Added HUD Scale option as a slider
    - Added Grid to Move HUD
    - Added back Chatbubbles in none protected areas
    - Added new options to bags: "Show scrap Icon", "Show Junk Icon", "Colouring professional bags", "Show Upgrade Icon", "Sell Junk automatically", "Show item level"
    - Added "Advanced Tooltips" with these options:
        - Show names in classcolor, show spec and ilvl while SHIFT is down, show AFK and DND Status, color level, etc.
        - Item Count: Shows how many Items you have in bags and in bank (from this item)
        - Spell/Item IDs: Shows the Spll/Item Id's in the tooltip
        - NPC IDs: Show the NPC ID in the tooltip
        - Current Mount: Display the current mount the player is riding, incl. source
        - Target Info: Shows who in your party/raid is targeting this target
        - Display the unit role in the tooltip
        - some more
    - Skin Blizzard Options (Interface and Settings), Addon List, Keybindings and Macro options
    - Added AFK-Mode
    - Added Chat copy button, to copy out text from the chatwindow
    - Added Auto repair mode
    - Added toggle for HUD background
    - Added more option to Player buffs:
        - Style: Secure (can be canceld in combat); Legacy (sorted)
        - Set the grow direction (left, right, up, down)
        - Set auras per row
    - Added Keybinds for "Sort Bag" and "Sort Bank"