@@ -236,7 +236,8 @@ local function GWUseThisLocalization()
     L["ANCHOR_CURSOR_OFFSET_Y"] = "Zeigeranker Y-Versatz"
     L["ANCHOR_CURSOR_OFFSET_DESC"] = "Wird nur angewendet, wenn die Option 'Tooltip an der Maus' aktiviert und der Mausanker Typ NICHT 'Mausanker' ist"
     L["MOUSE_OVER"] = "Nur Maus über"
-    L["PLAYER_AURA_GROW"] = "Bestimmt die Wachstumsrichtung der Spieler Auren"
+    L["PLAYER_BUFFS_GROW"] = "Bestimmt die Wachstumsrichtung der Spieler Buffs"
+    L["PLAYER_DEBUFFS_GROW"] = "Bestimmt die Wachstumsrichtung der Spieler Debuffs"
     L["RED_OVERLAY"] = "Rotes Overlay"
     L["MAINBAR_RANGE_INDICATOR"] = "Hauptaktionsleisten Reichweitenanzeige"
     L["PLAYER_ABSORB_VALUE_TEXT"] = "Schildwert anzeigen"
