@@ -236,7 +236,8 @@ local function GWUseThisLocalization()
     L["ANCHOR_CURSOR_OFFSET_Y"] = "Cursor Anchor Offset Y"
     L["ANCHOR_CURSOR_OFFSET_DESC"] = "Only takes effect if the option 'Cursor Tooltips' is activated and the cursor anchor is NOT 'Cursor Anchor'"
     L["MOUSE_OVER"] = "Only on Mouse Over"
-    L["PLAYER_AURA_GROW"] = "Player Aura Growth Direction"
+    L["PLAYER_BUFFS_GROW"] = "Player Buff Growth Direction"
+    L["PLAYER_DEBUFFS_GROW"] = "Player Debuffs Growth Direction"
     L["RED_OVERLAY"] = "Red Overlay"
     L["MAINBAR_RANGE_INDICATOR"] = "Main Bar Range Indicator"
     L["PLAYER_ABSORB_VALUE_TEXT"] = "Show Shield Value"
