@@ -235,7 +235,8 @@ local function GWUseThisLocalization()
     L["ANCHOR_CURSOR_OFFSET_Y"] = "Cursor Anchor Offset Y"
     L["ANCHOR_CURSOR_OFFSET_DESC"] = "Take only effect if the option 'Cursor Tooltips' is activated and the Cursoer Anchor is NOT 'Cursor Anchor'"
     L["MOUSE_OVER"] = "Only Mouse over"
-    L["PLAYER_AURA_GROW"] = "Set Player Aura grow directions"
+    L["PLAYER_BUFFS_GROW"] = "Player Buff Growth Direction"
+    L["PLAYER_DEBUFFS_GROW"] = "Player Debuffs Growth Direction"
     L["RED_OVERLAY"] = "Red overlay"
     L["MAINBAR_RANGE_INDICATOR"] = "Mainbar range indicator"
     L["PLAYER_ABSORB_VALUE_TEXT"] = "Show Shield value"
