@@ -164,7 +164,8 @@ local function GWUseThisLocalization()
     L["PIXEL_PERFECTION_OFF"] = "關閉完美細緻模式"
     L["PIXEL_PERFECTION_ON"] = "開啟完美細緻模式"
     L["PLAYER_ABSORB_VALUE_TEXT"] = "顯示護盾值"
-    L["PLAYER_AURA_GROW"] = "我的增益/減益圖示延伸方向"
+    L["PLAYER_BUFFS_GROW"] = "Player Buff Growth Direction"
+    L["PLAYER_DEBUFFS_GROW"] = "Player Debuffs Growth Direction"
     L["PLAYER_AURAS_DESC"] = "移動和縮放玩家光環。"
     L["PLAYER_DESC"] = "修改玩家框架設定。"
     L["POWER_BARS_RAID_DESC"] = "顯示隊友的能量條。"
